@@ -6,7 +6,6 @@ from zope import schema
 class ISupport(Interface):
     """ PDF Support
     """
-    can_download = schema.Bool(
-        u"Can download item as PDF",
-        readonly=True
-    )
+    def can_download():
+        """ Can download item as PDF
+        """
